--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div>
-  <button (click)="updateCounter(true)">Увеличить</button>
-  <input type="number" [(ngModel)]="count" />
-  <button (click)="updateCounter(false)">Уменьшить</button>
-</div>
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
+
