--- a/src/app/pages/second-task/second-task.component.html
+++ b/src/app/pages/second-task/second-task.component.html
@@ -1,1 +1,65 @@
-<p>second-task works!</p>
+<div>
+  <div class="table-date-container">
+  <table class="table-date">
+    <tr>
+      <th>Григорианский календарь</th>
+      <th>Юлианский календарь</th>
+      <th>Православный календарь</th>
+    </tr>
+    <tr>
+      <td>{{ currentDate | transformDate: 'gregorian' | date: 'dd.MM.yyyy' }}</td>
+      <td>{{ currentDate | transformDate: 'julian' | date: 'dd.MM.yyyy' }}</td>
+      <td>{{ currentDate | transformDate: 'orthodox' | date: 'dd.MM.yyyy'}}</td>
+    </tr>
+  </table>
+  </div>
+
+  <div class="btns">
+    <button class="action-btn" (click)="changeDay(false)">Предыдущий день</button>
+    <button class="action-btn" (click)="changeDay(true)">Cледующий день</button>
+  </div>
+
+ <div class="table-container">
+  <table class="table">
+    <thead>
+      <tr class="table-head">
+        <th>Разница, дней</th>
+        <th>Период (по юлианскому календарю)</th>
+        <th>Период (по григорианскому календарю)</th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>10</td>
+      <td>5 октября 1582 - 29 февраля 1700</td>
+      <td>15 октября 1582 - 11 марта 1700 </td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>1 марта 1700 - 29 февраля 1800</td>
+      <td>12 марта 1700 - 12 марта 1800 </td>
+    </tr>
+    <tr>
+      <td>12</td>
+      <td>1 марта 1800 - 29 февраля 1900</td>
+      <td>13 марта 1800 - 13 марта 1900 </td>
+    </tr>
+    <tr>
+      <td>13</td>
+      <td>1 марта 1900 - 29 февраля 2100</td>
+      <td>14 марта 1900 - 14 марта 2100 </td>
+    </tr>
+    <tr>
+      <td>14</td>
+      <td>1 марта 2100 - 29 февраля 2200</td>
+      <td>15 марта 2100 - 15 марта 2200 </td>
+    </tr>
+    <tr>
+      <td>15</td>
+      <td>1 марта 2200 - 29 февраля 2300</td>
+      <td>16 марта 2200 - 16 марта 2300 </td>
+    </tr>
+    </tbody>
+  </table>
+ </div>
+</div>
