--- a/src/app/pages/second-task/second-task.component.html
+++ b/src/app/pages/second-task/second-task.component.html
@@ -15,8 +15,8 @@
   </div>
 
   <div class="btns">
-    <button class="action-btn" (click)="changeDay(false)">Предыдущий день</button>
-    <button class="action-btn" (click)="changeDay(true)">Cледующий день</button>
+    <button class="action-btn" (click)="changeDay(-1)">Предыдущий день</button>
+    <button class="action-btn" (click)="changeDay(1)">Cледующий день</button>
   </div>
 
  <div class="table-container">
