--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,5 @@
 <nav class="navigation">
   <button [routerLink]="['/']" routerLinkActive="active">Задание 1</button>
   <button [routerLink]="['/second-task']" routerLinkActive="active">Задание 2</button>
+  <button [routerLink]="['/third-task']" routerLinkActive="active">Задание 3</button>
 </nav>
