--- a/src/app/pages/third-task/third-task.component.html
+++ b/src/app/pages/third-task/third-task.component.html
@@ -4,5 +4,5 @@
   <ul>
     <li *ngFor="let hobby of user.hobby">{{ hobby }}</li>
   </ul>
-  <p>Adress: {{user.fullAddress}}</p>
+  <p>Adress: {{user.address.fullAddress}}</p>
 </div>
